--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
@@ -6,275 +6,7 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
     <script type="text/javascript">
-        /* <![CDATA[ */
-        /*	var visiblility = false;
-         // Create the chart
-         drawXXX();
-         function drawXXX()
-         {
-         $(function ()
-         {
-         var chartValue = document.getElementById('ceForm:pTabView1:beanValueChart').value;
-         var assetListJSON = $.parseJSON(chartValue).assetList;
-         var subAssetListJSON = $.parseJSON(chartValue).subAssetList;
 
-         console.log(chartValue + "" + assetListJSON + "" + subAssetListJSON);
-
-         var colors = Highcharts.getOptions().colors,
-         categories = ["Equity", "Fixed Income", "Alternative", "Cash"],
-         data = subAssetListJSON,
-         browserData = [],
-         versionsData = [],
-         i,
-         j,
-         dataLen = data.length,
-         drillDataLen,
-         brightness;
-
-
-         // Build the data arrays
-         for (i = 0; i < dataLen; i += 1)
-         {
-
-         // add browser data
-         browserData.push({
-         name: categories[i],
-         y: data[i].y,
-         color: data[i].color
-         });
-
-         // add version data
-         console.log(data[i].drilldown);
-
-         drillDataLen = data[i].drilldown.length;
-
-         for (j = 0; j < drillDataLen; j += 1)
-         {
-         drillDataCategoriesLen = data[i].drilldown[j].categories.length;
-
-         for (k = 0; k < drillDataCategoriesLen; k += 1)
-         {
-         brightness = 0.2 - (j / drillDataLen) / 5;
-         versionsData.push({
-         name: data[i].drilldown[j].categories[k],
-         y: data[i].drilldown[j].data[k],
-         color: Highcharts.Color(data[i].color).brighten(brightness).get()
-
-         });
-         }
-         }
-         }
-         // Create the chart
-         Highcharts.chart('container', {
-         chart: {
-         type: 'pie'
-         },
-         title: {
-         text: ''
-         },
-         subtitle: {
-         text: ''
-         },
-         yAxis: {
-         title: {
-         text: ''
-         }
-         },
-         plotOptions: {
-         pie: {
-
-         center: ['50%', '50%']
-         }
-         },
-         tooltip: {
-         valueSuffix: '%'
-         },
-         series: [{
-         name: 'Browsers',
-         data: browserData,
-         size: '120%',
-         position: 'absolute',
-         innerSize: '50%',
-         animation: false,
-         dataLabels: {
-         enabled: false
-         },
-         point: {
-         events: {
-
-         click: function (event)
-         {
-         if (visiblility == false) {
-         visiblility = true;
-         } else {
-         visiblility = false;
-         }
-         drawXXX();
-         }
-         }
-         }
-         },
-         {
-         shadow: false,
-         name: 'Versions',
-         data: versionsData,
-         size: '100%',
-         innerSize: '60%',
-         visible: visiblility,
-         animation: false,
-         dataLabels: {
-         enabled: false
-         }
-         }]
-         });
-         });
-
-         } */
-        var weight_value = '';
-        var color_value = "";
-        var amount_value = "";
-        var name_value = "";
-        // Create the chart
-
-        function drawChart()
-        {
-            $(function ()
-              {
-                  // Create the chart
-                  var chartValue = document.getElementById('ceForm:pTabView1:beanValueChart').value;
-                  //var assetListJSON = $.parseJSON(chartValue).assetList;
-                  //var subAssetListJSON = $.parseJSON(chartValue).subAssetList;
-                  var assetJSON = $.parseJSON(chartValue)
-                  var iterator = 0;
-                  console.log(chartValue);
-                  var chart = Highcharts.chart('container3', {
-                                                   chart: {
-                                                       type: 'pie',
-                                                       options3d: {
-                                                           enabled: true,
-                                                           alpha: 0
-                                                       }
-                                                   },
-                                                   title: {
-                                                       text: ''
-                                                   },
-                                                   subtitle: {},
-                                                   exporting: {enabled: false},// remove menu righ top corner
-                                                   credits: { // remove highchart.com righbottom corner
-                                                       enabled: false
-                                                   },
-                                                   legend: {
-                                                       layout: 'vertical',
-                                                       align: 'right',
-                                                       verticalAlign: 'top',
-                                                       y: 60,
-                                                       useHTML: true
-                                                       ,
-                                                       itemMarginBottom: 10,
-                                                       labelFormatter: function ()
-                                                       {
-                                                           ++iterator;
-                                                           return '<div><span>' + this.name + '</span></div>';
-
-                                                       }
-                                                   },
-                                                   plotOptions: {
-                                                       pie: {
-                                                           allowPointSelect: true,
-                                                           cursor: 'pointer',
-                                                           dataLabels: {
-                                                               enabled: false
-                                                           },
-                                                           animation: false,
-                                                           showInLegend: true,
-                                                           innerSize: 200,
-                                                           depth: 0
-                                                       },
-                                                       showInLegend: true,
-                                                       series: {
-                                                           allowPointSelect: true,// remove if using details level details part
-                                                           cursor: 'pointer',
-                                                           dataLabels: {
-                                                               enabled: false,
-                                                               format: '{point.name}'
-                                                           },
-                                                           point: {
-                                                               events: {
-                                                                   mouseOver: function (event)
-                                                                   {
-
-                                                                       weight_value = this.y.toFixed(0) + "%";
-                                                                       name_value = this.name;
-                                                                       amount_value = '$'
-                                                                               + Highcharts.numberFormat(this.amount,
-                                                                                                         0, ',', ',');
-                                                                       color_value = this.color;
-
-                                                                       drawChart();
-                                                                   },
-                                                                   legendItemClick: function ()
-                                                                   {
-                                                                       weight_value = this.y.toFixed(0) + "%";
-                                                                       name_value = this.name;
-                                                                       amount_value = '$'
-                                                                               + Highcharts.numberFormat(this.amount,
-                                                                                                         0, ',', ',');
-                                                                       color_value = this.color;
-
-                                                                       drawChart();
-                                                                       return false;
-                                                                   }
-                                                               }
-                                                           }
-                                                       }
-                                                   },
-
-                                                   tooltip: {
-                                                       headerFormat: '{point.name}',
-                                                       pointFormat: '<span style="color:{point.color}"></span><b>$</b><b>{point.amount} - </b> <b>{point.y:.2f}%</b><br/>'
-                                                   },
-                                                   series: [{
-                                                       name: '',
-                                                       colorByPoint: true,
-                                                       data: assetJSON
-                                                   }]
-                                                   //	,drilldown: { // remove if display details level details only
-                                                   //	series: subAssetListJSON }
-
-                                               }
-
-                          ,
-                                               function (chart)
-                                               { // on complete
-
-                                                   var xpos = '50%';
-                                                   var ypos = '50%';
-                                                   var circleradius = 400;
-
-                                                   // Render the circle
-
-                                                   /*chart.renderer.circle(xpos, ypos, circleradius).attr({
-                                                    fill: '#000',
-                                                    innerSize: '80%'
-                                                    }).add();*/
-
-                                                   // Render the text
-                                                   var r = this.renderer,
-                                                           x = this.series[0].center[0] + this.plotLeft,
-                                                           y = this.series[0].center[1] + this.plotTop;
-
-                                                 chart.renderer.text('<span text-anchor="middle" style="text-anchor:middle; font-size: 14px;">' + name_value + '</span><br><span text-anchor="middle" style="text-anchor:middle;font-size: 20px;font-weight: bold;">' + amount_value + '</span><br><span text-anchor="middle" style="text-anchor:middle;font-size: 14px;">' + weight_value + '</span>', x , y - 20).css({
-                                                                                                                                                                                                                                                                                   width: circleradius * 2,
-                                                                                                                                                                                                                                                                                   color: color_value,
-                                                                                                                                                                                                                                                                                   textAlign: 'center'
-                                                                                                                                                                                                                                                                               }).attr({
-                                                                                                                                                                                                                                                                                           zIndex: 999
-                                                                                                                                                                                                                                                                                       }).add();
-                                               }
-                  );
-              });
-        }
-        /* ]]> */
     </script>
 
     <div class="Container100">
@@ -440,9 +172,9 @@
                                  </div>
                             </ui:fragment>
                             <ui:fragment rendered="#{uobpb.typeOfChart == 'HIGHCHART.2DDONUT'}">
-                                <div id="container3" ></div>
+                                <div id="2dDonutChart" ></div>
                                 <h:inputHidden value="#{uobpb.resultChart}"
-                                               id="beanValueChart"/>
+                                               id="twodDonutValueChart"/>
                                 <h:inputHidden value="#{uobpb.typeOfChart}"
                                                id="typeOfCharts"/>
                             </ui:fragment>
@@ -559,7 +291,7 @@
                               if(document.getElementById('ceForm:pTabView1:typeOfCharts') != null){
                                   if (document.getElementById('ceForm:pTabView1:typeOfCharts').value == 'HIGHCHART.2DDONUT')
                                   {
-                                      drawChart();
+                                      draw2dDonut1lyrChart();
                                   }
                               }
 
