--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/cadd.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/cadd.xhtml
@@ -14,6 +14,7 @@
 
     <ui:define name="content">
         <h:outputScript name="js/invCharts.js" library="#{uiLayout.webProfile.cssdir}"/>
+        <h:outputScript name="js/uobHighCharts.js" library="#{uiLayout.webProfile.cssdir}"/>
 
         <!-- HighChart .js plugin Start -->
         <h:outputScript name="js/highcharts.js" library="#{uiLayout.webProfile.cssdir}"/>
@@ -30,7 +31,6 @@
 
 
             <p:outputPanel id="workArea" styleClass="NBwidget ">
-
 
                 <div class="Container100 Responsive100 t1 uob_block1 layout-portlets-box">
                     <div class="ContainerIndent">
