--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final2.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final2.xhtml
@@ -79,7 +79,7 @@
                                id="beanValueChart1"/>
 
                 <div id="progressChart" class="Container50 Fright">
-
+                <!-- Build Performance Chart Here -->
                 </div>
             </div>
             <div class="Container100 Responsive100">
