--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/portfolioedit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/portfolioedit.xhtml
@@ -13,7 +13,7 @@
 
     <ui:define name="content">
         <h:outputScript name="js/invCharts.js" library="#{uiLayout.webProfile.cssdir}"/>
-
+        <h:outputScript name="js/tcmProjectionHighCharts.js" library="#{uiLayout.webProfile.cssdir}"/>
         <!-- HighChart .js plugin Start -->
         <h:outputScript name="js/highcharts.js" library="#{uiLayout.webProfile.cssdir}"/>
         <h:outputScript name="js/highcharts-3d.js" library="#{uiLayout.webProfile.cssdir}"/>
