--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/debt.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/debt.xhtml
@@ -6,57 +6,54 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
 
-        <div class="Container100 Responsive100 uob_tabsInputBlock">
-                <p:panelGrid columns="1" layout="grid" class="FormContent" styleClass="Container100 Responsive100"
-                             style="border:0px !important; background:none;margin-bottom:10px">
-                    <div class="TexAlLeft Wid100">
-                    <div class="uobBoldText" style="text-align: center;"> Number of Dependents</div>
+       <div class="Container100">
+				<span class="Fs30">Liability</span>
+			</div>
+			<div class="Container100">
+				<p:panelGrid columns="1" layout="grid" class="FormContent"
+					styleClass="Container100 Responsive100"
+					style="border:0px !important; background:none;margin-bottom:10px">
+					<div class="TexAlLeft Wid100">
+						<div class="uobBoldText" style="text-align: center;">Number
+							of Dependents</div>
 
-                    </div>
+					</div>
 
-                </p:panelGrid>
-            <p:panelGrid columns="1" layout="grid" class="FormContent" styleClass="Container100 Responsive100 liabilityCenterContent_uob"
-                         style="border:0px !important; background:none;margin-bottom:10px; text-align: center;">
-                <p:selectOneRadio value="#{uobpb.dependent}" stytleclass="fltr">
-                    <p:ajax listener="#{uobpb.onChangeValue}"
+				</p:panelGrid>
+				<p:panelGrid columns="1" layout="grid" class="FormContent"
+					styleClass="Container100 Responsive100 liabilityCenterContent_uob"
+					style="border:0px !important; background:none;margin-bottom:10px; text-align: center;">
+					<p:selectOneRadio value="#{uobpb.dependent}" stytleclass="fltr">
+						<p:ajax listener="#{uobpb.onChangeValue}"
                             update=":ceForm:workArea, :ceForm:graphArea"/>
-                    <f:selectItem itemLabel="0" itemValue="0"/>
-                    <f:selectItem itemLabel="1" itemValue="1"/>
-                    <f:selectItem itemLabel="2" itemValue="2"/>
-                    <f:selectItem itemLabel="3" itemValue="3"/>
-                    <f:selectItem itemLabel="4" itemValue="4"/>
-                    <f:selectItem itemLabel="5+" itemValue="5"/>
-                </p:selectOneRadio>
-                    </p:panelGrid>
-
-              <!--   <p:separator/>
-
-                <div class="EmptyBox5"></div> -->
-
-                <p:panelGrid columns="2" layout="grid" class="FormContent"
-                             style="border:0px !important; background:none;margin-bottom:10px">
-
-                    <div class="TexAlLeft Wid100">
-                    <div class="uobBoldText"> Total Expenses</div>
-                        <div class="uobSubText">(Yearly)</div>
-                    </div>
-                    <p:inputNumber value="#{uobpb.householdwages}" styleClass="Wid100 uob_number_field"
-                                    maxlength="15" decimalPlaces="0" symbol="$">
-                        <p:ajax listener="#{uobpb.onChangeValue}"
+						<f:selectItem itemLabel="0" itemValue="0" />
+						<f:selectItem itemLabel="1" itemValue="1" />
+						<f:selectItem itemLabel="2" itemValue="2" />
+						<f:selectItem itemLabel="3" itemValue="3" />
+						<f:selectItem itemLabel="4" itemValue="4" />
+						<f:selectItem itemLabel="5+" itemValue="5" />
+					</p:selectOneRadio>
+				</p:panelGrid>
+				<div class="TexAlLeft Wid100">
+					<div class="uobBoldText">Total Expenses</div>
+					<div class="uobSubText">(Yearly)</div>
+				</div>
+				<p:inputNumber value="#{uobpb.householdwages}"
+					styleClass="Wid100 uob_number_field" maxlength="15"
+					decimalPlaces="0" symbol="$">
+				<p:ajax listener="#{uobpb.onChangeValue}"
                                 update=":ceForm:workArea, :ceForm:graphArea"/>
-                    </p:inputNumber>
-
-                    <div class="Wid100">
-                    <div class="uobBoldText">Total Debt</div>
-                        <div class="uobSubText">(Yearly)</div>
-                    </div>
-                    <p:inputNumber value="#{uobpb.otherDebt}" styleClass="Wid100 uob_number_field"
-                                    maxlength="15" decimalPlaces="0" symbol="$">
-                        <p:ajax listener="#{uobpb.onChangeValue}"
+				</p:inputNumber>
+				<div class="EmptyBox10"></div>
+				<div class="Wid100">
+					<div class="uobBoldText">Total Debt</div>
+					<div class="uobSubText">(Yearly)</div>
+				</div>
+				<p:inputNumber value="#{uobpb.otherDebt}"
+					styleClass="Wid100 uob_number_field" maxlength="15"
+					decimalPlaces="0" symbol="$">
+					<p:ajax listener="#{uobpb.onChangeValue}"
                                 update=":ceForm:workArea, :ceForm:graphArea"/>
-                    </p:inputNumber>
-
-
-                </p:panelGrid>
-        </div>
+				</p:inputNumber>
+			</div>
 </ui:composition>
